# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  gendiff.py  generate_diff.py  parser.py
gendiff/formater/: formater.py  json.py  plain.py  stylish.py
gendiff/module/: gendiff .py  gendiff.py
gendiff/scripts/: gendiff.py
tests/: test_gendifference.py
tests/fixtures/: excepted_result_json.txt  fixrute_paths.py  fixture_paths.py
