[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "difference generator"
authors = ["Goglich <ivant4221@gmail.com>"]
readme = "README.md"

packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"